[package]
name = "flat-fee-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
data-encoding = { workspace = true }
flat_fee_interface = { workspace = true }
flat-fee-lib = { workspace = true }
lazy_static = { workspace = true }
s-cli-utils = { workspace = true }
sanctum-lst-list = { workspace = true }
sanctum-solana-cli-utils = { workspace = true }
sanctum-solana-client-utils = { workspace = true }
solana-client = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
solana-remote-wallet = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = { workspace = true }
cli-test-utils = { workspace = true }
flat-fee = { workspace = true, features = ["no-entrypoint"] }
flat-fee-test-utils = { workspace = true }
sanctum-solana-test-utils = { workspace = true, features = ["banks-rpc-server", "cli"] }
sanctum-macros = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
test-utils = { workspace = true }
