[package]
name = "flat-fee-lib"
version = "0.1.0"
edition = "2021"

[features]
testing = []


[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
flat_fee_interface = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-token-ratio = { workspace = true }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-utils = { workspace = true }
