[package]
name = "flat-fee-test-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
flat_fee_interface = { workspace = true }
flat-fee-lib = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
test-utils = { workspace = true }