[package]
name = "flat-fee-test-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
flat_fee_interface = { workspace = true }
flat-fee-lib = { workspace = true }
sanctum-solana-test-utils = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
test-utils = { workspace = true }