[package]
name = "generic-pool-calculator-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
generic_pool_calculator_interface = { path = "../../../generated/sol-value-calculator-programs/generic_pool_calculator_interface" }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
