[package]
name = "generic-pool-calculator-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-utils = { workspace = true }