[package]
name = "generic-pool-calculator-onchain"
version = "1.0.0"
edition = "2021"

[dependencies]
bytemuck = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
sanctum-misc-utils = { workspace = true }
sanctum-system-program-lib = { workspace = true }
sanctum-token-lib = { workspace = true }
solana-program = { workspace = true }
system_program_interface = { workspace = true }

[dev-dependencies]
generic-pool-calculator-test-utils = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-solana-test-utils = { workspace = true, features = ["token"] }
solana-program-test = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
solana-sdk = { workspace = true }
spl-stake-pool-keys = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true }
