[package]
name = "generic-sol-val-calc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
generic_pool_calculator_interface = { path = "../../../generated/sol-value-calculator-programs/generic_pool_calculator_interface" }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
