[package]
name = "lido-calculator-lib"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
lido_calculator_interface = { workspace = true }
lido-keys = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-token-ratio = { workspace = true, features = ["onchain"] }
sol-value-calculator-lib = { workspace = true }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
