[package]
name = "marinade-calculator-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
generic_pool_calculator_interface = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
marinade_calculator_interface = { workspace = true }
marinade-keys = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-token-ratio = { workspace = true }
sol-value-calculator-lib = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-utils = { workspace = true }
