[package]
name = "spl-calculator-lib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
generic_pool_calculator_interface = { path = "../../../generated/sol-value-calculator-programs/generic_pool_calculator_interface" }
generic-pool-calculator-lib = { path = "../generic-pool-calculator-lib" }
sanctum-macros = { workspace = true }
sanctum-token-ratio = { path = "../../sanctum-token-ratio" }
sol-value-calculator-lib = { path = "../sol-value-calculator-lib" }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
spl_calculator_interface = { path = "../../../generated/sol-value-calculator-programs/spl_calculator_interface" }
spl-stake-pool-keys = { path = "../../../keys/spl-stake-pool-keys" }

[dev-dependencies]
proptest = { workspace = true }
