[package]
name = "spl-calculator-lib"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-token-ratio = { workspace = true }
sol-value-calculator-lib = { workspace = true }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
spl_calculator_interface = { workspace = true }
spl-stake-pool-keys = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
