[package]
name = "spl-calculator-lib"
version = "2.0.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
generic_pool_calculator_interface = { workspace = true }
generic-pool-calculator-lib = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-spl-multi-stake-pool-keys = { workspace = true }
sanctum-spl-stake-pool-keys = { workspace = true }
sanctum-token-ratio = { workspace = true, features = ["onchain"] }
sol-value-calculator-lib = { workspace = true }
solana-program = { workspace = true }
solana-readonly-account = { workspace = true }
spl_calculator_interface = { workspace = true }
spl-stake-pool-keys = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
