[package]
name = "spl-sol-val-calc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic_pool_calculator_interface = { path = "../../../generated/sol-value-calculator-programs/generic_pool_calculator_interface" }
sanctum-macros = { workspace = true }
solana-program = { workspace = true }
generic-sol-val-calc-lib = { path = "../generic-sol-val-calc-lib" }