[package]
name = "wsol-calculator-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
sol-value-calculator-lib = { path = "../sol-value-calculator-lib" }
solana-program = { workspace = true }
wsol-keys = { path = "../../../keys/wsol-keys" }
wsol_calculator_interface = { path = "../../../generated/sol-value-calculator-programs/wsol_calculator_interface" }