[package]
name = "wsol-calculator-lib"
version = "1.0.0"
edition = "2021"

[dependencies]
sanctum-token-ratio = { workspace = true }
sol-value-calculator-lib = { workspace = true }
solana-program = { workspace = true }
wsol-keys = { workspace = true }
wsol_calculator_interface = { workspace = true }