[package]
name = "flat-fee"
version = "1.0.0"
edition = "2021"

[features]
no-entrypoint = []
testing = ["flat-fee-lib/testing"]

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
flat_fee_interface = { workspace = true }
flat-fee-lib = { workspace = true }
sanctum-misc-utils = { workspace = true }
sanctum-s-common = { workspace = true }
sanctum-system-program-lib = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
flat-fee-lib = { workspace = true, features = ["testing"] }
flat-fee-test-utils = { workspace = true }
sanctum-solana-test-utils = { workspace = true }
solana-program-test = { workspace = true }
solana-readonly-account = { workspace = true, features = ["solana-sdk"] }
solana-sdk = { workspace = true }
test-utils = { workspace = true }
tokio = { workspace = true }
